--- a/src/templates/chat.html
+++ b/src/templates/chat.html
@@ -25,7 +25,7 @@
     <li>
       <span>Pre-Exam</span>
       <ul>
-        <li><a href="/menu/pre-exam/qcm">VRAI/FAUX</a></li>
+        <li><a href="/menu/pre-exam/qcm_tf">VRAI/FAUX</a></li>
       </ul>
     </li>
   </ul>
